// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftNavHamburgerButton renders per snapshot for Assessment 1`] = `
<LeftNavHamburgerButton
  ariaLabel="Assessment - all tests and requirements list"
/>
`;

exports[`LeftNavHamburgerButton renders per snapshot for FastPass 1`] = `
<LeftNavHamburgerButton
  ariaLabel="FastPass - all tests list"
/>
`;
